Added get all deposits
