# application/controllers/DepositController.js
@@ -1,9 +1,11 @@
+const getAllDeposits = require("../useCases/GetAllDepositsUseCase");
 const retrieveDeposit = require("../useCases/RetrieveDepositUseCase");
 const createDeposit = require("../useCases/CreateDepositUseCase");
 const { NotFoundException } = require("../../domain/exceptions/NotFoundException");
 const { BadRequestException } = require("../exceptions/BadRequestException");
 const { AlreadyExistsException } = require("../../domain/exceptions/AlreadyExistsException");
 const serializer = require("../serializers/DepositSerializer");
+const { restart } = require("nodemon");
 
 exports.createDeposit = (req, res) => {
   const apikey = req.get("authorization");
@@ -44,5 +46,18 @@ exports.getDeposit = (req, res) => {
       }
       return res.status(500).send({ message: err.message });
     });
+  return null;
+};
+
+exports.getAllDeposits = (req, res) => {
+  const apikey = req.get("authorization");
+  if (!apikey || apikey !== process.env.PAYMENTSERVICE_APIKEY) {
+    return res.status(401).send({ message: "Unauthorized" });
+  }
+  const repository = req.app.serviceLocator.depositRepository;
+
+  getAllDeposits(repository, req.query)
+    .then(deposits => res.status(200).json(serializer(deposits)))
+    .catch(err => res.status(500).send({ message: err.message }));
   return null;
 };
